--- a/css/slider.css
+++ b/css/slider.css
@@ -3,23 +3,24 @@
 	/* box-sizing: border-box; */
 }
 
-html, body {
-	font-size: 18px;
+html,
+body {
+	font-size: 1rem;
 	font-family: sans-serif;
 }
 
 .container {
-	max-width: 80%;
-	margin: 30px auto;
+	max-width: 85%;
+	margin: 2rem auto;
 	background: #e9e6e6;
-	padding: 10px;
+	padding: 0.5rem;
 }
 
 button {
 	background: none;
 	border: 1px solid rgb(105, 103, 235);
 	border-radius: 4px;
-	padding: 20px 40px;
+	padding: 1.2rem 2.5rem;
 	font-size: 1rem;
 }
 
@@ -34,21 +35,22 @@ button:active {
 
 .slider {
 	border: 2px solid rgb(121, 113, 113);
-	width: 500px;
-	height: 500px;
-	margin: 20px auto;
+	width: 31.25rem;
+	height: 31.25rem;
+	margin: 1.2rem auto;
 	overflow: hidden;
-	}
+}
 
 .slider__line {
-	width:500px;
-	height: 500px;
+	width: 31.25rem;
+	height: 31.25rem;
 	display: flex;
 	position: relative;
 	left: 0;
 	transition: all ease 1s;
 }
+
 .slider__img {
-	width: 500px;
-	height: 500px;
+	width: 31.25rem;
+	height: 31.25rem;
 }
