--- a/css/slider.css
+++ b/css/slider.css
@@ -1,18 +1,7 @@
-* {
-	margin: 0;
-	/* box-sizing: border-box; */
-}
-
-html,
-body {
-	font-size: 1rem;
-	font-family: sans-serif;
-}
-
 .container {
-	max-width: 85%;
+	max-width: 40%;
 	margin: 2rem auto;
-	background: #e9e6e6;
+	background: #fff;
 	padding: 0.5rem;
 }
 
