--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
 @import url(./slider.css);
 @import url(./weather.css);
 @import url(./calc.css);
+
+* {
+	margin: 0 auto;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: #43AFFC;
+}
