--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url(./slider.css);
 @import url(./weather.css);
-@import url(./calc.css);
+@import url(./calculator.css);
 
 * {
 	margin: 0 auto;
@@ -10,7 +10,18 @@
 
 body {
 	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
 	justify-content: center;
-	background: #43AFFC;
+	background: var(--blue);
+}
+
+:root {
+	--white: #ffffff;
+	--blue: #43AFFC;
+	--card-border: #ccc;
+	--shadow: rgb(105, 103, 235);
+	--gray: #b3b3b3;
+	--citycolor: rgb(151, 209, 209);
+	--black: rgba(0, 0, 0, 0.3);
 }
