--- a/css/calculator.css
+++ b/css/calculator.css
@@ -17,22 +17,22 @@
 }
 
 .input__calc {
-	margin: 1.2rem 1.5rem 1.8rem;
+	margin: 1rem;
 }
 
 .input__calc :where(input, button) {
 	width: 100%;
-	height: 3.4rem;
+	height: 2.6rem;
 	border: none;
 	outline: none;
-	font-size: 1.5rem;
+	font-size: 1.2rem;
 	border-radius: .5rem;
 	text-align: center;
 }
 
 .input__calc input {
 	text-align: center;
-	padding: 1rem;
+	padding: 0.5rem;
 	border: 1px solid var(--card-border);
 }
 
