--- a/css/weather.css
+++ b/css/weather.css
@@ -7,7 +7,7 @@
 }
 
 .wrapper .input__part {
-	margin: 1.2rem 1.5rem 1.8rem;
+	margin: 1rem;
 }
 
 .wrapper.active .input__part {
@@ -16,7 +16,7 @@
 
 .input__part :where(input, button) {
 	width: 100%;
-	height: 3.4rem;
+	height: 2.5rem;
 	border: none;
 	outline: none;
 	font-size: 1rem;
@@ -32,7 +32,7 @@
 .input__part .separator {
 	height: 1px;
 	width: 100%;
-	margin: 1.5rem 0;
+	margin: 1rem 0;
 	background: var(--card-border);
 	position: relative;
 	display: flex;
@@ -87,14 +87,14 @@
 }
 
 .weather__city {
-	font-size: 4rem;
+	font-size: 2.5rem;
 	font-weight: 700;
 	margin-bottom: 1rem;
 }
 
 .weather__status {
-	font-size: 2rem;
-	margin-bottom: 1.5rem;
+	font-size: 1.8rem;
+	margin-bottom: 1.2rem;
 }
 
 .weather__temp {
