--- a/css/timer.css
+++ b/css/timer.css
@@ -25,7 +25,8 @@
   padding: 1rem;
 }
 
-.timer__link {
+.timer__link, 
+.timer__long {
   border: none;
   font-size: 1rem;
   color: var(--white);
@@ -46,32 +47,44 @@
   height: 18rem;
   border: 5px solid var(--blue);
   border-radius: 10rem;
+  padding: 6rem 0;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  font-size: 2.5rem;
+}
+
+.inputs {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 3.5rem;
   margin: 0 auto;
+  font-size: 2rem;
+  padding: 1rem 0 3rem 0;
+    
 }
 
 
 .timer__buttons {
   display: flex;
-}
+ 
+  }
 
 .timer__button_stop,
-.timer__button_start {
+.timer__button_start,
+.timer__button_pause {
   border: none;
   font-size: 1.2rem;
   color: var(--white);
   cursor: pointer;
   background: var(--blue);
   transition: 0.3s ease;
-  width: 10rem;
+  width: 15rem;
   height: 3rem;
   text-align: center;
   justify-content: center;
-  padding: 0.8rem;
-  margin: 0.5rem 3rem;
+  padding: 1rem;
+  margin: 1rem 1rem;
 }
 
 .timer__button:hover {
