--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,4 @@
+@import "nullstyle.css";
 @import "./slider.scss";
 @import "./weather.scss";
 @import "./calculator.scss";
@@ -10,11 +11,11 @@
 }
 
 body {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	justify-content: center;
-	background: var(--blue);
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+		justify-content: center;
+		background: var(--blue);
 }
 
 :root {
