--- a/src/scss/timer.scss
+++ b/src/scss/timer.scss
@@ -81,8 +81,8 @@
   justify-content: center;
   padding: 0.5rem;
   margin: 1rem 1rem;
-}
 
-.timer__button:hover {
-  background: var(--blue);
+  &:hover {
+    background: var(--blue);
+  }
 }
