feature/JS: - add first files

--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,8 +1,8 @@
 :root {
   --white: #ffffff;
-  --blue: #43AFFC;
+  --blue: #92cbf3;
   --card-border: #ccc;
-  --shadow: rgb(105, 103, 235);
+  --shadow: rgb(164, 163, 231);
   --gray: #b3b3b3;
   --citycolor: rgb(151, 209, 209);
   --black: rgba(0, 0, 0, 0.3);
