--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,9 +1,9 @@
 :root {
   --white: #ffffff;
-  --blue: #b4d9f3;
+  --blue: #9bc2dd;
   --card-border: #ccc;
-  --shadow: rgb(191, 190, 243);
+  --shadow:rgb(38 37 51);
   --gray: #b3b3b3;
-  --citycolor: rgb(151, 209, 209);
+  --citycolor:rgb(154 185 185);
   --black: rgba(0, 0, 0, 0.3);
 }
