feature/JS: - add first files

--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,6 +1,6 @@
 :root {
   --white: #ffffff;
-  --blue: #9bc2dd;
+  --blue: #a5bdce;
   --card-border: #ccc;
   --shadow:rgb(38 37 51);
   --gray: #b3b3b3;
